--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <meta http-equiv="X-UA-Compatable" content="ie-edge">
 
         <link rel="stylesheet" href="styles/styles.css">
+        <link rel="shortcut icon" href="images/guitar.png" type="image/x-icon">
 
-        <title>Jazzmeowster</title>
+        <title>Jazzmeowster Academy</title>
     </head>
     <body>
         <div class="container">
@@ -119,7 +120,7 @@
                 <div class="footLink">
                     <img  class="icon" id="phoneIcon" src="icons/phone.svg">
                     <a  class="footerText" 
-                        href="tel: +X(XXX)XXX-XX-XX"
+                        href="tel:+X(XXX)XXX-XX-XX"
                         id="phoneNumber">+X(XXX)XXX-XX-XX</a>
                 </div>
                 
